<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--
    <string name=""></string>
    -->
    <string name="app_name">BluetoothPayment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send_main_register">Register Your Card</string>
    <string name="send_main_start">Start</string>
    <string name="card_number">Card Number</string>
    <string name="valid_date">Valid Date</string>
    <string name="your_name">Your Name</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="please_register">Please register your card first</string>
    <string name="please_fill">Please fill in the forms</string>
    <string name="register_success">Register Success</string>
    <string name="connecting">Connecting...</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="start_sending">Starting...</string>
    <string name="wait_text">Searching...</string>
    <string name="clear">Clear</string>
    <string name="confirm">Confirm</string>
    <string name="enter_pin">Please enter your PIN</string>
    <string name="enter_pay_amount">Please enter the amount of pay</string>
    <string name="sann"></string>
    <string name="payment_finish">The payment has been finished.</string>
    <string name="total_amount">Total</string>
    <string name="find_another_device">Find another device</string>

</resources>
